Created components and get rutes for control rechazo

--- a/pagadurias/templates/createPagaduria.html
+++ b/pagadurias/templates/createPagaduria.html
@@ -288,176 +288,7 @@
         </div>
 
         <!-- Sección 6: Documentos -->
-        <div class="form-step hidden h-full flex-col justify-between items-stretch">
-            <div class="grid grid-cols-2 md:grid-cols-3 gap-6">
-                <div class="flex flex-col mt-5 relative">
-                    <div class="absolute -top-6 right-0 z-10 group">
-                        <div class="opacity-0 invisible group-hover:opacity-100 group-hover:visible bg-white border border-blue-550 shadow-lg p-3 rounded-lg absolute z-20 w-72 -top-14 right-0 transition-all duration-300">
-                            <div class="flex items-start space-x-3">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-550 mt-0.5 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-                                </svg>
-                                <p class="text-sm text-gray-600">Documento de convenio firmado entre la pagaduría y Coovitel</p>
-                            </div>
-                        <div class="absolute -bottom-2 right-4 w-4 h-4 bg-white border-b border-r border-blue-550 transform rotate-45"></div>
-                    </div>
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-550 cursor-help" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                        </svg>
-                    </div>
-                    {{ form.convenio|add_class:"peer input-field" }}
-                    {{ form.convenio.label_tag|safe }}
-                </div>
-                <div class="flex flex-col mt-5 relative">
-                    <div class="absolute -top-6 right-0 z-10 group">
-                        <div class="opacity-0 invisible group-hover:opacity-100 group-hover:visible bg-white border border-blue-550 shadow-lg p-3 rounded-lg absolute z-20 w-72 -top-20 right-0 transition-all duration-300">
-                            <div class="flex items-start space-x-3">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-550 mt-0.5 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-                                </svg>
-                                <p class="text-sm text-gray-600">Formulario de vinculación completamente diligenciado y firmado</p>
-                            </div>
-                            <div class="absolute -bottom-2 right-4 w-4 h-4 bg-white border-b border-r border-blue-550 transform rotate-45"></div>
-                        </div>
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-550 cursor-help" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                        </svg>
-                    </div>
-                    {{ form.formulariovinculacion|add_class:"peer input-field" }}
-                    {{ form.formulariovinculacion.label_tag|safe }}
-                </div>
-                <div class="flex flex-col mt-5 relative">
-                    <div class="absolute -top-6 right-0 z-10 group">
-                        <div class="opacity-0 invisible group-hover:opacity-100 group-hover:visible bg-white border border-blue-550 shadow-lg p-3 rounded-lg absolute z-20 w-72 -top-14 right-0 transition-all duration-300">
-                            <div class="flex items-start space-x-3">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-550 mt-0.5 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-                                </svg>
-                                <p class="text-sm text-gray-600">Tarjetas de firmas autorizadas para los procesos de libranza</p>
-                            </div>
-                            <div class="absolute -bottom-2 right-4 w-4 h-4 bg-white border-b border-r border-blue-550 transform rotate-45"></div>
-                        </div>
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-550 cursor-help" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                        </svg>
-                    </div>
-                    {{ form.tarjetasFirma|add_class:"peer input-field" }}
-                    {{ form.tarjetasFirma.label_tag|safe }}
-                </div>
-                <div class="flex flex-col mt-5 relative">
-                    <div class="absolute -top-6 right-0 z-10 group">
-                        <div class="opacity-0 invisible group-hover:opacity-100 group-hover:visible bg-white border border-blue-550 shadow-lg p-3 rounded-lg absolute z-20 w-72 -top-14 right-0 transition-all duration-300">
-                            <div class="flex items-start space-x-3">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-550 mt-0.5 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-                                </svg>
-                                <p class="text-sm text-gray-600">RUT actualizado de la empresa (no mayor a 30 días)</p>
-                            </div>
-                            <div class="absolute -bottom-2 right-4 w-4 h-4 bg-white border-b border-r border-blue-550 transform rotate-45"></div>
-                        </div>
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-550 cursor-help" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                        </svg>
-                    </div>
-                    {{ form.rut|add_class:"peer input-field" }}
-                    {{ form.rut.label_tag|safe }}
-                </div>
-                <div class="flex flex-col mt-5 relative">
-                    <div class="absolute -top-6 right-0 z-10 group">
-                        <div class="opacity-0 invisible group-hover:opacity-100 group-hover:visible bg-white border border-blue-550 shadow-lg p-3 rounded-lg absolute z-20 w-72 -top-14 right-0 transition-all duration-300">
-                            <div class="flex items-start space-x-3">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-550 mt-0.5 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-                                </svg>
-                                <p class="text-sm text-gray-600">Certificado de Cámara de Comercio actualizado (no mayor a 30 días)</p>
-                            </div>
-                            <div class="absolute -bottom-2 right-4 w-4 h-4 bg-white border-b border-r border-blue-550 transform rotate-45"></div>
-                        </div>
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-550 cursor-help" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                        </svg>
-                    </div>
-                    {{ form.camaraComercio|add_class:"peer input-field" }}
-                    {{ form.camaraComercio.label_tag|safe }}
-                </div>
-                <div class="flex flex-col mt-5 relative">
-                    <div class="absolute -top-6 right-0 z-10 group">
-                        <div class="opacity-0 invisible group-hover:opacity-100 group-hover:visible bg-white border border-blue-550 shadow-lg p-3 rounded-lg absolute z-20 w-72 -top-14 right-0 transition-all duration-300">
-                            <div class="flex items-start space-x-3">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-550 mt-0.5 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-                                </svg>
-                                <p class="text-sm text-gray-600">Estados financieros de los últimos 2 años</p>
-                            </div>
-                            <div class="absolute -bottom-2 right-4 w-4 h-4 bg-white border-b border-r border-blue-550 transform rotate-45"></div>
-                        </div>
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-550 cursor-help" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                        </svg>
-                    </div>
-                    {{ form.estadosFinancieros|add_class:"peer input-field" }}
-                    {{ form.estadosFinancieros.label_tag|safe }}
-                </div>
-                <div class="flex flex-col mt-5 relative">
-                    <div class="absolute -top-6 right-0 z-10 group">
-                        <div class="opacity-0 invisible group-hover:opacity-100 group-hover:visible bg-white border border-blue-550 shadow-lg p-3 rounded-lg absolute z-20 w-72 -top-14 right-0 transition-all duration-300">
-                            <div class="flex items-start space-x-3">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-550 mt-0.5 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-                                </svg>
-                                <p class="text-sm text-gray-600">Declaración de renta del último año gravable</p>
-                            </div>
-                            <div class="absolute -bottom-2 right-4 w-4 h-4 bg-white border-b border-r border-blue-550 transform rotate-45"></div>
-                        </div>
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-550 cursor-help" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                        </svg>
-                    </div>
-                    {{ form.declaracionRenta|add_class:"peer input-field" }}
-                    {{ form.declaracionRenta.label_tag|safe }}
-                </div>
-                <div class="flex flex-col mt-5 relative">
-                    <div class="absolute -top-6 right-0 z-10 group">
-                        <div class="opacity-0 invisible group-hover:opacity-100 group-hover:visible bg-white border border-blue-550 shadow-lg p-3 rounded-lg absolute z-20 w-72 -top-14 right-0 transition-all duration-300">
-                            <div class="flex items-start space-x-3">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-550 mt-0.5 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-                                </svg>
-                                <p class="text-sm text-gray-600">Consulta en centrales de riesgo (no mayor a 30 días)</p>
-                            </div>
-                            <div class="absolute -bottom-2 right-4 w-4 h-4 bg-white border-b border-r border-blue-550 transform rotate-45"></div>
-                        </div>
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-550 cursor-help" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                        </svg>
-                    </div>
-                    {{ form.centrales|add_class:"peer input-field" }}
-                    {{ form.centrales.label_tag|safe }}
-                </div>
-                <div class="flex flex-col mt-5 relative">
-                    <div class="absolute -top-6 right-0 z-10 group">
-                        <div class="opacity-0 invisible group-hover:opacity-100 group-hover:visible bg-white border border-blue-550 shadow-lg p-3 rounded-lg absolute z-20 w-72 -top-14 right-0 transition-all duration-300">
-                            <div class="flex items-start space-x-3">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-550 mt-0.5 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-                                </svg>
-                                <p class="text-sm text-gray-600">Documento Composicion accionaria emitida por el revisor fiscal</p>
-                            </div>
-                            <div class="absolute -bottom-2 right-4 w-4 h-4 bg-white border-b border-r border-blue-550 transform rotate-45"></div>
-                        </div>
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-550 cursor-help" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                        </svg>
-                    </div>
-                    {{ form.composicionAccionaria|add_class:"peer input-field" }}
-                    {{ form.composicionAccionaria.label_tag|safe }}
-                </div>
-            </div>
-            <div class="flex justify-between mt-6">
-                <button type="button" class="prev-btn">⬅️ Anterior</button>
-                <button type="submit" class="submit-btn">✅ Crear Pagaduría</button>
-            </div>
-        </div>
+        {% include "components/form_documents.html" %}
     </form>
 </div>
 
