--- a/pagadurias/templates/pagaduriasAprobacion.html
+++ b/pagadurias/templates/pagaduriasAprobacion.html
@@ -25,12 +25,12 @@
                             {{ pagaduria.estadoFinanciero }}
                         </span>
                     </td>
-                    <td class="py-3 px-4">
+                    <td class="py-3 px-4 text-center">
                         <span class="px-2 py-1 text-xs font-semibold text-white rounded-lg {% if pagaduria.estadoRiesgos == 'Aprobado' %} bg-green-500 {% elif pagaduria.estadoRiesgos == 'Pendiente' %} bg-yellow-500 {% else %} bg-red-500 {% endif %}">
                             {{ pagaduria.estadoRiesgos }}
                         </span>
                     </td>
-                    <td class="py-3 px-4">
+                    <td class="py-3 px-4 text-center">
                         <span class="px-2 py-1 text-xs font-semibold text-white rounded-lg {% if pagaduria.estadoComercial == 'Aprobado' %} bg-green-500 {% elif pagaduria.estadoComercial == 'Pendiente' %} bg-yellow-500 {% else %} bg-red-500 {% endif %}">
                             {{ pagaduria.estadoComercial }}
                         </span>
